﻿[B]Changelog[/B]
* Fixed: improper dates in Dplay.se and related channels (See #1042)
* Fixed: missed the "premium/paid" on videos still to be broad casted (Fixes #1042)

[I]Previous changes[/I]
* Fixed: SVT Listing of Live Channels broke (Fixes #1023)
* Fixed: TV4/TV7.se were showing incorrect dates for the videos (Fixes #1004)
* Fixed: some TV4 stream did not work if the Adaptive Stream add-on was not used (Fixes #988)
* Added: Animal Planet, Discovery, Discovery World, Discovery Science, Investigative Discovery and VOX via dplay.no (Fixes #959)
* Added: Dplay.no FEM, MAX and TLC seperate channels (See #959)
* Added: Dplay.no fanart and seperate TVNorge channel (See #959)
* Fixed: renamed Dplay.se channel
* Fixed: TV4Play live items (Fixes #956)
* Added: Dplay.no (See #959)
* Fixed: TV4Play updated their API for TV4 and Sjuan (Fixes #954)
* Fixed: Dplay HTTP header issue (See #947)
* Fixed: Dplay (and others) now uses Adaptive add-on under Kodi Leia (Fixes #947)
* Fixed: Playback of Kanal5/9 (Fixes #936)
* Fixed: single videos did not play in genres (Fixes #932)
* Added: separate Dplay.se channel (Fixes #921)
* Fixed: TV4 Play json parsing issue (Fixes #919)
* Added: TV4Play.se Live Livesändningar (Fixes #915)
* Removed: TV4 Live, as it moved to cmore.se (Closes #914)
* Fixed: UR Play again (Fixes #910)
* Fixed: UR Play (Fixes #907)
* Fixed: SVT listing broke (Fixes #899)
* Fixed: Exclude "Kommande" folders (Fixes #881)
* Fixed: TV4Play can work without HTTPS and thus without SSL errors (See #859)
* Fixed: SVT API update (Fixes #857)
* Fixed: Paging issue with Kanal 5
* Fixed: SVT Live channels (Fixes #853)
* Removed: TV4 login option as it never really made sense and all premium content is now at cmore.se (See #450)
* Fixed: Some fanart did now show for SVT
* Fixed: SVT did not play due to API changes (Fixes #828)
* Fixed: Some thumbnails did not show for SVT (Fixes #813)
* Added: SVT and Oppet Arkiv genres (Fixes #624)